// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[FAQDetailsContainer renders correctly after cancel faq] 1`] = `
<div>
  <div>
    <h3>
      FAQ Details
    </h3>
    <select
      className="selectedFaq"
      onChange={[Function]}
      value={1}
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
  </div>
  <div>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Create
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Delete
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Update
    </button>
  </div>
</div>
`;

exports[`[FAQDetailsContainer renders correctly after creating faq] 1`] = `
<div>
  <div>
    <h3>
      FAQ Details
    </h3>
    <select
      className="selectedFaq"
      onChange={[Function]}
      value={1}
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
  </div>
  <div>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Create
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Delete
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Update
    </button>
  </div>
</div>
`;

exports[`[FAQDetailsContainer renders correctly after deleting faq] 1`] = `
<div>
  <div>
    <h3>
      FAQ Details
    </h3>
    <select
      className="selectedFaq"
      onChange={[Function]}
      value={1}
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
  </div>
  <div>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Create
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Delete
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Update
    </button>
  </div>
</div>
`;

exports[`[FAQDetailsContainer renders correctly after selecting different faq] 1`] = `
<div>
  <h3>
    FAQ Details
  </h3>
  <select
    className="selectedFaq"
    onChange={[Function]}
    value={1}
  />
  <br />
  <input
    className="title form-control"
    onChange={[Function]}
  />
  <br />
  <input
    className="question form-control"
    onChange={[Function]}
  />
</div>
`;

exports[`[FAQDetailsContainer renders correctly after selecting different faq] 2`] = `
<div>
  <h3>
    FAQ Details
  </h3>
  <select
    className="selectedFaq"
    onChange={[Function]}
    value={1}
  />
  <br />
  <input
    className="title form-control"
    onChange={[Function]}
  />
  <br />
  <input
    className="question form-control"
    onChange={[Function]}
  />
</div>
`;

exports[`[FAQDetailsContainer renders correctly after updating faq] 1`] = `
<div>
  <div>
    <h3>
      FAQ Details
    </h3>
    <select
      className="selectedFaq"
      onChange={[Function]}
      value={1}
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
    <br />
    <input
      onChange={[Function]}
      type="text"
    />
  </div>
  <div>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Cancel
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Create
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Delete
    </button>
    <button
      class="btn btn-primary"
      onClick={[Function]}
    >
      Update
    </button>
  </div>
</div>
`;

exports[`[FAQDetailsContainer renders correctly] 1`] = `
<div>
  <h3>
    FAQ Details
  </h3>
  <select
    className="selectedFaq"
    onChange={[Function]}
    value={1}
  />
  <br />
  <input
    className="title form-control"
    onChange={[Function]}
  />
  <br />
  <input
    className="question form-control"
    onChange={[Function]}
  />
</div>
`;

exports[`[FAQDetailsContainer renders correctly] 2`] = `
<div>
  <h3>
    FAQ Details
  </h3>
  <select
    className="selectedFaq"
    onChange={[Function]}
    value={1}
  />
  <br />
  <input
    className="title form-control"
    onChange={[Function]}
  />
  <br />
  <input
    className="question form-control"
    onChange={[Function]}
  />
</div>
`;
